--- a/power.ipynb
+++ b/power.ipynb
@@ -2,7 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
+   "id": "f4ea2f0f-55c2-43e5-b57d-74897a22f6c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.lazard.com/research-insights/2023-levelized-cost-of-energyplus/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a686168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyomo\n",
+      "  Using cached pyomo-6.9.5-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (9.1 kB)\n",
+      "Collecting ply (from pyomo)\n",
+      "  Using cached ply-3.11-py2.py3-none-any.whl.metadata (844 bytes)\n",
+      "Using cached pyomo-6.9.5-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (4.4 MB)\n",
+      "Using cached ply-3.11-py2.py3-none-any.whl (49 kB)\n",
+      "Installing collected packages: ply, pyomo\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [pyomo]32m1/2\u001b[0m [pyomo]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed ply-3.11 pyomo-6.9.5\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pyomo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -11,8 +48,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4b0307f",
+   "metadata": {},
+   "source": [
+    "battery capacity less than or equal to off peak requirement\n",
+    "\n",
+    "stored power = peak_requirement - solar_capacity\n",
+    "\n",
+    "off peak cost = off peak grid price *  (off peak requirement - solar capacity)\n",
+    "\n",
+    "peak cost = peak requirement - solar capacity\n",
+    "\n",
+    "minimize total cost"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [
@@ -23,48 +76,59 @@
       "Model unknown\n",
       "\n",
       "  Variables:\n",
-      "    llamas : Size=1, Index=None\n",
+      "    solar_capacity : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  20.0 :  None : False : False : NonNegativeReals\n",
-      "    goats : Size=1, Index=None\n",
+      "        None :     0 :  10.0 :  None : False : False : NonNegativeReals\n",
+      "    peak_grid_usage : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  20.0 :  None : False : False : NonNegativeReals\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
       "\n",
       "  Objectives:\n",
-      "    maximizeProfits : Size=1, Index=None, Active=True\n",
+      "    minimizeCost : Size=1, Index=None, Active=True\n",
       "        Key  : Active : Value\n",
-      "        None :   True : 10000.0\n",
+      "        None :   True :   0.0\n",
       "\n",
       "  Constraints:\n",
-      "    LaborConstraint : Size=1\n",
-      "        Key  : Lower : Body  : Upper\n",
-      "        None :  None : 100.0 : 100.0\n",
-      "    MedialConstraint : Size=1\n",
-      "        Key  : Lower : Body  : Upper\n",
-      "        None :  None : 120.0 : 120.0\n",
-      "    LandConstraint : Size=1\n",
+      "    abs_constraint1 : Size=1\n",
       "        Key  : Lower : Body : Upper\n",
-      "        None :  None : 40.0 :  45.0\n",
+      "        None :  None :  0.0 :   0.0\n",
+      "    abs_constraint2 : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  None : -0.0 :   0.0\n",
       "None\n"
      ]
     }
    ],
    "source": [
     "model = pyo.ConcreteModel()\n",
+    "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "# model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, initialize=0)\n",
+    "model.peak_price = pyo.Param(initialize=0.25)\n",
+    "model.peak_requirement = pyo.Param(initialize=10)\n",
+    "# model.off_peak_price = pyo.Param(initialize=0.25)\n",
+    "# model.off_peak_requirement = pyo.Param(initialize=5)\n",
     "\n",
-    "model = pyo.ConcreteModel()\n",
     "\n",
-    "model.llamas = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.goats = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "# model.PeakConstraint = pyo.Constraint(expr=model.grid + model.SolarCapacity == 900)\n",
+    "# model.total_power_constraint = pyo.Constraint(\n",
+    "#    expr=model.solar_capacity <= model.battery_capacity + model.peak_requirement\n",
+    "# )\n",
     "\n",
-    "model.maximizeProfits = pyo.Objective(expr=200 * model.llamas  + 300 * model.goats, sense=pyo.maximize)\n",
+    "model.peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
     "\n",
-    "model.LaborConstraint = pyo.Constraint(expr = 3 * model.llamas + 2 * model.goats <= 100)\n",
-    "model.MedialConstraint = pyo.Constraint(expr=2* model.llamas + 4 * model.goats <= 120)\n",
-    "model.LandConstraint  = pyo.Constraint(expr = model.llamas + model.goats <= 45)\n",
-    "#model.maximizeNumberOfAnimals = pyo.Objective(expr=model.llamas + model.goats, sense=pyo.maximize)\n",
+    "model.minimizeCost = pyo.Objective(\n",
+    "    expr=model.peak_grid_usage,\n",
+    "    sense=pyo.minimize,\n",
+    ")\n",
     "\n",
-    "optimizer = pyo.SolverFactory('glpk')\n",
+    "model.abs_constraint1 = pyo.Constraint(\n",
+    "    expr=model.peak_grid_usage >= model.peak_requirement - model.solar_capacity\n",
+    ")\n",
+    "model.abs_constraint2 = pyo.Constraint(\n",
+    "    expr=model.peak_grid_usage >= -(model.peak_requirement - model.solar_capacity)\n",
+    ")\n",
+    "\n",
+    "optimizer = pyo.SolverFactory(\"glpk\")\n",
     "optimizer.solve(model)\n",
     "print(model.display())"
    ]
@@ -72,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6ef88f-7246-4641-97ea-23e77cb53a65",
+   "id": "5391f72f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -80,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
