--- a/power.ipynb
+++ b/power.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "f4ea2f0f-55c2-43e5-b57d-74897a22f6c3",
    "metadata": {},
    "outputs": [],
@@ -12,34 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1a686168",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyomo\n",
-      "  Using cached pyomo-6.9.5-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (9.1 kB)\n",
-      "Collecting ply (from pyomo)\n",
-      "  Using cached ply-3.11-py2.py3-none-any.whl.metadata (844 bytes)\n",
-      "Using cached pyomo-6.9.5-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (4.4 MB)\n",
-      "Using cached ply-3.11-py2.py3-none-any.whl (49 kB)\n",
-      "Installing collected packages: ply, pyomo\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [pyomo]32m1/2\u001b[0m [pyomo]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed ply-3.11 pyomo-6.9.5\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install pyomo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -65,67 +48,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model unknown\n",
-      "\n",
-      "  Variables:\n",
-      "    solar_capacity : Size=1, Index=None\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  10.0 :  None : False : False : NonNegativeReals\n",
-      "    peak_grid_usage : Size=1, Index=None\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
-      "\n",
-      "  Objectives:\n",
-      "    minimizeCost : Size=1, Index=None, Active=True\n",
-      "        Key  : Active : Value\n",
-      "        None :   True :   0.0\n",
-      "\n",
-      "  Constraints:\n",
-      "    abs_constraint1 : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :  None :  0.0 :   0.0\n",
-      "    abs_constraint2 : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :  None : -0.0 :   0.0\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "# model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, initialize=0)\n",
-    "model.peak_price = pyo.Param(initialize=0.25)\n",
-    "model.peak_requirement = pyo.Param(initialize=10)\n",
-    "# model.off_peak_price = pyo.Param(initialize=0.25)\n",
-    "# model.off_peak_requirement = pyo.Param(initialize=5)\n",
-    "\n",
-    "\n",
-    "# model.PeakConstraint = pyo.Constraint(expr=model.grid + model.SolarCapacity == 900)\n",
-    "# model.total_power_constraint = pyo.Constraint(\n",
-    "#    expr=model.solar_capacity <= model.battery_capacity + model.peak_requirement\n",
-    "# )\n",
+    "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.peak_load = pyo.Param(initialize=10)\n",
+    "model.off_peak_load = pyo.Param(initialize=5)\n",
+    "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
     "\n",
     "model.peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
     "\n",
     "model.minimizeCost = pyo.Objective(\n",
-    "    expr=model.peak_grid_usage,\n",
+    "    expr=model.peak_grid_usage + model.off_peak_grid_usage,\n",
     "    sense=pyo.minimize,\n",
     ")\n",
     "\n",
     "model.abs_constraint1 = pyo.Constraint(\n",
-    "    expr=model.peak_grid_usage >= model.peak_requirement - model.solar_capacity\n",
+    "    expr=model.peak_load >= model.peak_grid_consumption - model.solar_capacity\n",
     ")\n",
     "model.abs_constraint2 = pyo.Constraint(\n",
-    "    expr=model.peak_grid_usage >= -(model.peak_requirement - model.solar_capacity)\n",
+    "    expr=model.peak_load >= -(model.peak_grid_consumption - model.solar_capacity)\n",
+    ")\n",
+    "\n",
+    "model.peak_constraint = pyo.Constraint(\n",
+    "    expr=model.peak_load <= model.peak_grid_consumption + model.solar_capacity\n",
+    ")\n",
+    "\n",
+    "model.off_peak_constraint = pyo.Constraint(\n",
+    "    expr=model.off_peak_load <= model.off_peak_grid_usage + model.battery_capacity\n",
     ")\n",
     "\n",
     "optimizer = pyo.SolverFactory(\"glpk\")\n",
@@ -136,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5391f72f",
+   "id": "da1f713c",
    "metadata": {},
    "outputs": [],
    "source": []
