battery capacity works

--- a/power.ipynb
+++ b/power.ipynb
@@ -48,10 +48,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model unknown\n",
+      "\n",
+      "  Variables:\n",
+      "    solar_capacity : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :  15.0 :  None : False : False : NonNegativeReals\n",
+      "    peak_grid_consumption : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    off_peak_grid_usage : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    battery_capacity : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   5.0 :  None : False : False : NonNegativeReals\n",
+      "\n",
+      "  Objectives:\n",
+      "    minimizeCost : Size=1, Index=None, Active=True\n",
+      "        Key  : Active : Value\n",
+      "        None :   True :   2.0\n",
+      "\n",
+      "  Constraints:\n",
+      "    off_peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   5.0 :  5.0 :  None\n",
+      "    peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  10.0 : 15.0 :  None\n",
+      "    battery_charging_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  None :  0.0 :   0.0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
@@ -61,27 +100,39 @@
     "model.off_peak_load = pyo.Param(initialize=5)\n",
     "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
     "\n",
-    "model.peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "\n",
+    "model.peak_grid_price = pyo.Param(initialize=0.2)\n",
+    "model.off_peak_grid_price = pyo.Param(initialize=0.5)\n",
+    "model.solar_cost_per_kw = pyo.Param(initialize=0.1)\n",
+    "model.battery_cost_per_kw = pyo.Param(initialize=0.1)\n",
     "\n",
     "model.minimizeCost = pyo.Objective(\n",
-    "    expr=model.peak_grid_usage + model.off_peak_grid_usage,\n",
+    "    expr=(model.peak_grid_price * model.peak_grid_consumption)\n",
+    "    + (model.off_peak_grid_price * model.off_peak_grid_usage)\n",
+    "    + (model.solar_cost_per_kw * model.solar_capacity)\n",
+    "    + (model.battery_cost_per_kw * model.battery_capacity),\n",
     "    sense=pyo.minimize,\n",
     ")\n",
-    "\n",
+    "\"\"\"\n",
     "model.abs_constraint1 = pyo.Constraint(\n",
     "    expr=model.peak_load >= model.peak_grid_consumption - model.solar_capacity\n",
     ")\n",
     "model.abs_constraint2 = pyo.Constraint(\n",
     "    expr=model.peak_load >= -(model.peak_grid_consumption - model.solar_capacity)\n",
     ")\n",
+    "\"\"\"\n",
+    "model.off_peak_constraint = pyo.Constraint(\n",
+    "    expr=model.off_peak_load <= model.off_peak_grid_usage + model.battery_capacity\n",
+    ")\n",
     "\n",
     "model.peak_constraint = pyo.Constraint(\n",
     "    expr=model.peak_load <= model.peak_grid_consumption + model.solar_capacity\n",
     ")\n",
     "\n",
-    "model.off_peak_constraint = pyo.Constraint(\n",
-    "    expr=model.off_peak_load <= model.off_peak_grid_usage + model.battery_capacity\n",
+    "model.battery_charging_constraint = pyo.Constraint(\n",
+    "    expr=model.battery_capacity <= model.solar_capacity - model.peak_load\n",
     ")\n",
+    "\n",
     "\n",
     "optimizer = pyo.SolverFactory(\"glpk\")\n",
     "optimizer.solve(model)\n",
