--- a/power.ipynb
+++ b/power.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [
@@ -56,26 +56,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "solar capacity: 14.0 kW, battery capacity: 4.0 kWh, off peak grid usage: 1.0 kW, peak grid consumption: 0.0 kW\n",
       "Model unknown\n",
       "\n",
       "  Variables:\n",
       "    solar_capacity : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  15.0 :  None : False : False : NonNegativeReals\n",
+      "        None :     0 :  14.0 :  None : False : False : NonNegativeReals\n",
       "    peak_grid_consumption : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
       "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
       "    off_peak_grid_usage : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "        None :     0 :   1.0 :  None : False : False : NonNegativeReals\n",
       "    battery_capacity : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   5.0 :  None : False : False : NonNegativeReals\n",
+      "        None :     0 :   4.0 :     4 : False : False : NonNegativeReals\n",
       "\n",
       "  Objectives:\n",
       "    minimizeCost : Size=1, Index=None, Active=True\n",
       "        Key  : Active : Value\n",
-      "        None :   True :   2.0\n",
+      "        None :   True : 2.3000000000000003\n",
       "\n",
       "  Constraints:\n",
       "    off_peak_constraint : Size=1\n",
@@ -83,7 +84,7 @@
       "        None :   5.0 :  5.0 :  None\n",
       "    peak_constraint : Size=1\n",
       "        Key  : Lower : Body : Upper\n",
-      "        None :  10.0 : 15.0 :  None\n",
+      "        None :  10.0 : 14.0 :  None\n",
       "    battery_charging_constraint : Size=1\n",
       "        Key  : Lower : Body : Upper\n",
       "        None :  None :  0.0 :   0.0\n",
@@ -98,7 +99,7 @@
     "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
     "model.peak_load = pyo.Param(initialize=10)\n",
     "model.off_peak_load = pyo.Param(initialize=5)\n",
-    "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, bounds=(0, 4))\n",
     "\n",
     "\n",
     "model.peak_grid_price = pyo.Param(initialize=0.2)\n",
@@ -113,14 +114,7 @@
     "    + (model.battery_cost_per_kw * model.battery_capacity),\n",
     "    sense=pyo.minimize,\n",
     ")\n",
-    "\"\"\"\n",
-    "model.abs_constraint1 = pyo.Constraint(\n",
-    "    expr=model.peak_load >= model.peak_grid_consumption - model.solar_capacity\n",
-    ")\n",
-    "model.abs_constraint2 = pyo.Constraint(\n",
-    "    expr=model.peak_load >= -(model.peak_grid_consumption - model.solar_capacity)\n",
-    ")\n",
-    "\"\"\"\n",
+    "\n",
     "model.off_peak_constraint = pyo.Constraint(\n",
     "    expr=model.off_peak_load <= model.off_peak_grid_usage + model.battery_capacity\n",
     ")\n",
@@ -136,13 +130,16 @@
     "\n",
     "optimizer = pyo.SolverFactory(\"glpk\")\n",
     "optimizer.solve(model)\n",
+    "print(\n",
+    "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
+    ")\n",
     "print(model.display())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1f713c",
+   "id": "162c9675",
    "metadata": {},
    "outputs": [],
    "source": []
