--- a/power.ipynb
+++ b/power.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4ea2f0f-55c2-43e5-b57d-74897a22f6c3",
+   "cell_type": "markdown",
+   "id": "7753d04f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# https://www.lazard.com/research-insights/2023-levelized-cost-of-energyplus/"
+    "https://www.lazard.com/research-insights/2023-levelized-cost-of-energyplus/\n",
+    "\n",
+    "battery capacity less than or equal to off peak requirement\n",
+    "\n",
+    "stored power = peak_requirement - solar_capacity\n",
+    "\n",
+    "off peak cost = off peak grid price *  (off peak requirement - solar capacity)\n",
+    "\n",
+    "peak cost = peak requirement - solar capacity\n",
+    "\n",
+    "minimize total cost"
    ]
   },
   {
@@ -34,17 +42,7 @@
    "cell_type": "markdown",
    "id": "d4b0307f",
    "metadata": {},
-   "source": [
-    "battery capacity less than or equal to off peak requirement\n",
-    "\n",
-    "stored power = peak_requirement - solar_capacity\n",
-    "\n",
-    "off peak cost = off peak grid price *  (off peak requirement - solar capacity)\n",
-    "\n",
-    "peak cost = peak requirement - solar capacity\n",
-    "\n",
-    "minimize total cost"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -95,14 +93,6 @@
     ")\n",
     "print(model.display())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "162c9675",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
