--- a/power.ipynb
+++ b/power.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "https://www.lazard.com/research-insights/2023-levelized-cost-of-energyplus/\n",
     "\n",
+    "https://www.energy.gov/eere/solar/solar-photovoltaic-system-cost-benchmarks\n",
+    "\n",
     "battery capacity less than or equal to off peak requirement\n",
     "\n",
     "stored power = peak_requirement - solar_capacity\n",
@@ -46,13 +48,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solar capacity: 14.0 kW, battery capacity: 4.0 kWh, off peak grid usage: 1.0 kW, peak grid consumption: 0.0 kW\n",
+      "Model unknown\n",
+      "\n",
+      "  Variables:\n",
+      "    solar_capacity : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     3 :  14.0 :    15 : False : False : {3, 5, 6, 8, 10, 12, 15}\n",
+      "    peak_grid_consumption : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    off_peak_grid_usage : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   1.0 :  None : False : False : NonNegativeReals\n",
+      "    battery_capacity : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   4.0 :     4 : False : False : NonNegativeReals\n",
+      "\n",
+      "  Objectives:\n",
+      "    minimizeCost : Size=1, Index=None, Active=True\n",
+      "        Key  : Active : Value\n",
+      "        None :   True : 2.3000000000000003\n",
+      "\n",
+      "  Constraints:\n",
+      "    off_peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   5.0 :  5.0 :  None\n",
+      "    peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  10.0 : 14.0 :  None\n",
+      "    battery_charging_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  None :  0.0 :   0.0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "model = pyo.ConcreteModel()\n",
-    "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.solar_capacities = [3, 5, 6, 8, 10, 12, 15]\n",
+    "model.solar_capacity = pyo.Var(domain=model.solar_capacities)\n",
     "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
     "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
     "model.peak_load = pyo.Param(initialize=10)\n",
@@ -93,6 +136,14 @@
     ")\n",
     "print(model.display())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cbfcc33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
