--- a/power.ipynb
+++ b/power.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [
@@ -58,13 +58,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solar capacity: 14.0 kW, battery capacity: 4.0 kWh, off peak grid usage: 1.0 kW, peak grid consumption: 0.0 kW\n",
+      "solar capacity: 5.0 kW, battery capacity: 4.0 kWh, off peak grid usage: 1.0 kW, peak grid consumption: 0.0 kW\n",
       "Model unknown\n",
       "\n",
       "  Variables:\n",
+      "    select_solar_capacity : Size=7, Index=solar_capacities\n",
+      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "          3 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          5 :     0 :   1.0 :     1 : False : False : Binary\n",
+      "          6 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          8 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         10 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         12 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         15 :     0 :   0.0 :     1 : False : False : Binary\n",
       "    solar_capacity : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     3 :  14.0 :    15 : False : False : {3, 5, 6, 8, 10, 12, 15}\n",
+      "        None :  None :   5.0 :  None : False : False :  Reals\n",
       "    peak_grid_consumption : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
       "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
@@ -78,31 +87,40 @@
       "  Objectives:\n",
       "    minimizeCost : Size=1, Index=None, Active=True\n",
       "        Key  : Active : Value\n",
-      "        None :   True : 2.3000000000000003\n",
+      "        None :   True :   1.4\n",
       "\n",
       "  Constraints:\n",
+      "    pick_one : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   1.0 :  1.0 :   1.0\n",
       "    off_peak_constraint : Size=1\n",
       "        Key  : Lower : Body : Upper\n",
       "        None :   5.0 :  5.0 :  None\n",
       "    peak_constraint : Size=1\n",
       "        Key  : Lower : Body : Upper\n",
-      "        None :  10.0 : 14.0 :  None\n",
+      "        None :   1.0 :  5.0 :  None\n",
       "    battery_charging_constraint : Size=1\n",
       "        Key  : Lower : Body : Upper\n",
       "        None :  None :  0.0 :   0.0\n",
+      "    set_solar_capacity : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
       "None\n"
      ]
     }
    ],
    "source": [
     "model = pyo.ConcreteModel()\n",
-    "model.solar_capacities = [3, 5, 6, 8, 10, 12, 15]\n",
-    "model.solar_capacity = pyo.Var(domain=model.solar_capacities)\n",
+    "\n",
+    "model.solar_capacities = pyo.Set(initialize=[3, 5, 6, 8, 10, 12, 15])\n",
+    "model.select_solar_capacity = pyo.Var(model.solar_capacities, within=pyo.Binary)\n",
+    "model.solar_capacity = pyo.Var()\n",
     "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
     "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.peak_load = pyo.Param(initialize=10)\n",
-    "model.off_peak_load = pyo.Param(initialize=5)\n",
     "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, bounds=(0, 4))\n",
+    "model.peak_load = pyo.Param(initialize=1)\n",
+    "model.off_peak_load = pyo.Param(initialize=5)\n",
+    "\n",
     "\n",
     "\n",
     "model.peak_grid_price = pyo.Param(initialize=0.5)\n",
@@ -118,6 +136,12 @@
     "    sense=pyo.minimize,\n",
     ")\n",
     "\n",
+    "def pick_one(m):\n",
+    "    return 1 == sum(m.select_solar_capacity[i] for i in m.solar_capacities)\n",
+    "model.pick_one = pyo.Constraint(rule=pick_one)\n",
+    "\n",
+    "\n",
+    "\n",
     "model.off_peak_constraint = pyo.Constraint(\n",
     "    expr=model.off_peak_load <= model.off_peak_grid_usage + model.battery_capacity\n",
     ")\n",
@@ -130,13 +154,37 @@
     "    expr=model.battery_capacity <= model.solar_capacity - model.peak_load\n",
     ")\n",
     "\n",
+    "def set_solar_capacity(m):\n",
+    "    return m.solar_capacity == sum(i*m.select_solar_capacity[i] for i in m.solar_capacities)\n",
+    "model.set_solar_capacity = pyo.Constraint(rule=set_solar_capacity)\n",
     "\n",
-    "optimizer = pyo.SolverFactory(\"glpk\")\n",
+    "\n",
+    "optimizer = pyo.SolverFactory(\"gurobi\")\n",
     "optimizer.solve(model)\n",
     "print(\n",
     "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
     ")\n",
     "print(model.display())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d19abbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solar_capacity : Size=1, Index=None\n",
+      "    Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "    None :  five :  None : three : False :  True : {three, four, five}\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.solar_capacity.display()"
    ]
   },
   {
@@ -150,7 +198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
