--- a/discrete_lookup_scratch.ipynb
+++ b/discrete_lookup_scratch.ipynb
@@ -5,56 +5,27 @@
    "execution_count": null,
    "id": "b704207c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model unknown\n",
-      "\n",
-      "  Variables:\n",
-      "    x : Size=3, Index=I\n",
-      "        Key : Lower : Value     : Upper   : Fixed : Stale : Domain\n",
-      "          a :     0 :       0.0 : 1000000 : False : False : NonNegativeReals\n",
-      "          b :     0 :       0.0 : 1000000 : False : False : NonNegativeReals\n",
-      "          c :     0 : 1000000.0 : 1000000 : False : False : NonNegativeReals\n",
-      "\n",
-      "  Objectives:\n",
-      "    objective : Size=1, Index=None, Active=True\n",
-      "        Key  : Active : Value\n",
-      "        None :   True : 1000000.0\n",
-      "\n",
-      "  Constraints:\n",
-      "    None\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyomo.environ as pyo\n",
+    "\n",
     "# Dictionary for the coefficients (A[i])\n",
-    "A_COEFFICIENTS = {\n",
-    "    'a': 1,\n",
-    "    'b': 2,\n",
-    "    'c': 3\n",
-    "}\n",
+    "A_COEFFICIENTS = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "# --- 2. Build the Model ---\n",
     "model = pyo.ConcreteModel()\n",
     "model.I = pyo.Set(initialize=A_COEFFICIENTS.keys())\n",
     "model.x = pyo.Var(model.I, within=pyo.NonNegativeReals, bounds=(0, 1000000))\n",
+    "model.y = pyo.Var(within=pyo.NonNegativeReals)\n",
     "\n",
     "\n",
     "def consumption_function_rule(model):\n",
-    "   # sum_term = sum(model.A[i] * model.x[i] for i in model.I)\n",
-    "    sum_term = sum(model.x[i] for i in model.I)\n",
+    "    sum_term = sum(A_COEFFICIENTS[i] * model.x[i] for i in model.I)\n",
     "    return model.y == sum_term\n",
     "\n",
-    "def sum_of_x(model):\n",
-    "    return sum(model.x[i] for i in model.I)\n",
     "\n",
-    "\n",
+    "model.consumption_constraint = pyo.Constraint(rule=consumption_function_rule)\n",
     "model.sos1_constraint = pyo.SOSConstraint(var=model.x, sos=1)\n",
-    "model.objective = pyo.Objective(expr=sum_of_x, sense=pyo.maximize)\n",
+    "model.objective = pyo.Objective(expr=model.y, sense=pyo.maximize)\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
     "optimizer.solve(model)\n",
     "print(model.display())"
@@ -62,71 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "165a28ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<generator object _ScalarOrderedSetMixin.values at 0x7f4d95814ac0>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.I.values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a84a9e89",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I : Size=1, Index=None, Ordered=Insertion\n",
-      "    Key  : Dimen : Domain : Size : Members\n",
-      "    None :     1 :    Any :    3 : {'a', 'b', 'c'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.I.pprint()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "47e3c11f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x : Size=3, Index=I\n",
-      "    Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "      a :     0 :     0 :  None : False : False : NonNegativeReals\n",
-      "      b :     0 :     0 :  None : False : False : NonNegativeReals\n",
-      "      c :     0 :     0 :  None : False : False : NonNegativeReals\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.x.pprint()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "824c5e41",
+   "id": "0251cb94",
    "metadata": {},
    "outputs": [],
    "source": []
