--- a/discrete_lookup_scratch.ipynb
+++ b/discrete_lookup_scratch.ipynb
@@ -2,13 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "f134921a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyomo.environ as pyo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b704207c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyomo.environ as pyo\n",
-    "\n",
     "# Dictionary for the coefficients (A[i])\n",
     "A_COEFFICIENTS = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "# --- 2. Build the Model ---\n",
@@ -56,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
