--- a/power.ipynb
+++ b/power.ipynb
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyomo.environ as pyo"
+    "import pyomo.environ as pyo\n",
+    "from solar_installations import INSTALLATION_SIZES"
    ]
   },
   {
@@ -51,14 +52,7 @@
    "source": [
     "model = pyo.ConcreteModel()\n",
     "\n",
-    "solar_capacity_costs = {3: 0.3, 5: 0.5, 6: 0.6, 8: 0.8, 10: 1.0, 12: 1.2, 15: 1.5}\n",
     "\n",
-    "model.solar_capacities = pyo.Set(initialize=solar_capacity_costs.keys())\n",
-    "model.select_solar_capacity = pyo.Var(model.solar_capacities, within=pyo.Binary)\n",
-    "model.solar_capacity = pyo.Var()\n",
-    "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, bounds=(0, 4))\n",
     "model.peak_load = pyo.Param(initialize=1)\n",
     "model.off_peak_load = pyo.Param(initialize=5)\n",
     "model.solar_cost = pyo.Param(domain=pyo.NonNegativeReals)\n",
@@ -68,6 +62,10 @@
     "model.off_peak_grid_price = pyo.Param(initialize=0.5)\n",
     "model.solar_cost_per_kw = pyo.Param(initialize=0.1)\n",
     "model.battery_cost_per_kw = pyo.Param(initialize=0.1)\n",
+    "model.solar_capacity = pyo.Var()\n",
+    "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, bounds=(0, 4))\n",
     "\n",
     "model.minimizeCost = pyo.Objective(\n",
     "    expr=(model.peak_grid_price * model.peak_grid_consumption)\n",
@@ -101,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cbfcc33",
+   "id": "0cfa4602",
    "metadata": {},
    "outputs": [],
    "source": []
