capacity and cost

--- a/discrete_lookup_scratch.ipynb
+++ b/discrete_lookup_scratch.ipynb
@@ -7,33 +7,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyomo.environ as pyo"
+    "import pyomo.environ as pyo\n",
+    "from solar_installations import INSTALLATION_SIZES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b704207c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Loading a SolverResults object with a warning status into\n",
+      "model.name=\"unknown\";\n",
+      "    - termination condition: infeasibleOrUnbounded\n",
+      "    - message from solver: Problem proven to be infeasible or unbounded.\n",
+      "Model unknown\n",
+      "\n",
+      "  Variables:\n",
+      "    solar_size_flags : Size=6, Index=SOLAR_SIZES\n",
+      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "          3 :     0 :  None :     1 : False :  True : Binary\n",
+      "          5 :     0 :  None :     1 : False :  True : Binary\n",
+      "          6 :     0 :  None :     1 : False :  True : Binary\n",
+      "          8 :     0 :  None :     1 : False :  True : Binary\n",
+      "         10 :     0 :  None :     1 : False :  True : Binary\n",
+      "         12 :     0 :  None :     1 : False :  True : Binary\n",
+      "    installed_solar : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :  None :  None : False :  True : NonNegativeReals\n",
+      "\n",
+      "  Objectives:\n",
+      "    objective : Size=1, Index=None, Active=True\n",
+      "ERROR: evaluating object as numeric value: objective\n",
+      "        (object: <class 'pyomo.core.base.objective.ScalarObjective'>)\n",
+      "    No value for uninitialized ScalarObjective object objective\n",
+      "        Key : Active : Value\n",
+      "        None :   None :  None\n",
+      "\n",
+      "  Constraints:\n",
+      "    consumption_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 : None :   0.0\n",
+      "    required_power_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   6.0 : None :  None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Dictionary for the coefficients (A[i])\n",
-    "A_COEFFICIENTS = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
-    "# --- 2. Build the Model ---\n",
     "model = pyo.ConcreteModel()\n",
-    "model.I = pyo.Set(initialize=A_COEFFICIENTS.keys())\n",
-    "model.x = pyo.Var(model.I, within=pyo.NonNegativeReals, bounds=(0, 1000000))\n",
-    "model.y = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.SOLAR_SIZES = pyo.Set(initialize=INSTALLATION_SIZES.keys())\n",
+    "model.solar_size_flags = pyo.Var(model.SOLAR_SIZES, within=pyo.Binary)\n",
+    "model.installed_solar = pyo.Var(within=pyo.NonNegativeReals)\n",
     "\n",
     "\n",
-    "def consumption_function_rule(model):\n",
-    "    sum_term = sum(A_COEFFICIENTS[i] * model.x[i] for i in model.I)\n",
-    "    return model.y == sum_term\n",
+    "def installed_solar_constraint(model):\n",
+    "    sum_term = sum(model.solar_size_flags[i] for i in model.SOLAR_SIZES)\n",
+    "    return model.installed_solar == sum_term\n",
     "\n",
     "\n",
-    "model.consumption_constraint = pyo.Constraint(rule=consumption_function_rule)\n",
-    "model.sos1_constraint = pyo.SOSConstraint(var=model.x, sos=1)\n",
-    "model.objective = pyo.Objective(expr=model.y, sense=pyo.maximize)\n",
+    "model.consumption_constraint = pyo.Constraint(rule=installed_solar_constraint)\n",
+    "model.sos1_constraint = pyo.SOSConstraint(var=model.solar_size_flags, sos=1)\n",
+    "\n",
+    "\n",
+    "def required_power(model):\n",
+    "    return model.installed_solar >= 6\n",
+    "\n",
+    "\n",
+    "model.required_power_constraint = pyo.Constraint(rule=required_power)\n",
+    "\n",
+    "\"\"\"\n",
+    "def solar_cost(model):\n",
+    "    return model.solar_cost == sum(\n",
+    "        INSTALLATION_SIZES[size] * model.solar_size_flags[size]\n",
+    "        for size in model.SOLAR_SIZES\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.solar_cost_constraint = pyo.Constraint(rule=solar_cost)\n",
+    "\"\"\"\n",
+    "model.objective = pyo.Objective(expr=model.installed_solar, sense=pyo.maximize)\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
     "optimizer.solve(model)\n",
     "print(model.display())"
