solar constraints work

--- a/discrete_lookup_scratch.ipynb
+++ b/discrete_lookup_scratch.ipynb
@@ -13,10 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b704207c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model unknown\n",
+      "\n",
+      "  Variables:\n",
+      "    solar_size_flags : Size=6, Index=SOLAR_SIZES\n",
+      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "          3 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          5 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          6 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          8 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         10 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         12 :     0 :   1.0 :     1 : False : False : Binary\n",
+      "    solar_capacity : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :  12.0 :  None : False : False : NonNegativeReals\n",
+      "    solar_cost : Size=1, Index=None\n",
+      "        Key  : Lower : Value   : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 24000.0 :  None : False : False : NonNegativeReals\n",
+      "\n",
+      "  Objectives:\n",
+      "    objective : Size=1, Index=None, Active=True\n",
+      "        Key  : Active : Value\n",
+      "        None :   True : 24000.0\n",
+      "\n",
+      "  Constraints:\n",
+      "    consumption_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
+      "    required_power_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   6.0 : 12.0 :  None\n",
+      "    solar_capacity_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "model.SOLAR_SIZES = pyo.Set(initialize=INSTALLATION_SIZES.keys())\n",
