--- a/power.ipynb
+++ b/power.ipynb
@@ -9,8 +9,6 @@
     "\n",
     "https://www.energy.gov/eere/solar/solar-photovoltaic-system-cost-benchmarks\n",
     "\n",
-    "https://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\n",
-    "\n",
     "battery capacity less than or equal to off peak requirement\n",
     "\n",
     "stored power = peak_requirement - solar_capacity\n",
@@ -19,7 +17,7 @@
     "\n",
     "peak cost = peak requirement - solar capacity\n",
     "\n",
-    "minimize total cost\n"
+    "minimize total cost"
    ]
   },
   {
@@ -55,14 +53,16 @@
     "\n",
     "model.peak_load = pyo.Param(initialize=1)\n",
     "model.off_peak_load = pyo.Param(initialize=5)\n",
-    "model.solar_cost = pyo.Param(domain=pyo.NonNegativeReals)\n",
-    "\n",
-    "\n",
     "model.peak_grid_price = pyo.Param(initialize=0.5)\n",
     "model.off_peak_grid_price = pyo.Param(initialize=0.5)\n",
-    "model.solar_cost_per_kw = pyo.Param(initialize=0.1)\n",
     "model.battery_cost_per_kw = pyo.Param(initialize=0.1)\n",
-    "model.solar_capacity = pyo.Var()\n",
+    "\n",
+    "\n",
+    "model.SOLAR_SIZES = pyo.Set(initialize=INSTALLATION_SIZES.keys())\n",
+    "model.solar_size_flags = pyo.Var(model.SOLAR_SIZES, within=pyo.Binary)\n",
+    "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "\n",
     "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
     "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
     "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, bounds=(0, 4))\n",
@@ -70,7 +70,7 @@
     "model.minimizeCost = pyo.Objective(\n",
     "    expr=(model.peak_grid_price * model.peak_grid_consumption)\n",
     "    + (model.off_peak_grid_price * model.off_peak_grid_usage)\n",
-    "    + (model.solar_cost_per_kw * model.solar_capacity)\n",
+    "    + model.solar_cost\n",
     "    + (model.battery_cost_per_kw * model.battery_capacity),\n",
     "    sense=pyo.minimize,\n",
     ")\n",
@@ -88,6 +88,32 @@
     ")\n",
     "\n",
     "\n",
+    "def installed_solar_constraint(model):\n",
+    "    sum_term = sum(\n",
+    "        INSTALLATION_SIZES[i] * model.solar_size_flags[i] for i in model.SOLAR_SIZES\n",
+    "    )\n",
+    "    return model.solar_cost == sum_term\n",
+    "\n",
+    "\n",
+    "model.consumption_constraint = pyo.Constraint(rule=installed_solar_constraint)\n",
+    "model.sos1_constraint = pyo.SOSConstraint(var=model.solar_size_flags, sos=1)\n",
+    "\n",
+    "\n",
+    "def required_power(model):\n",
+    "    return model.solar_capacity >= 6\n",
+    "\n",
+    "\n",
+    "model.required_power_constraint = pyo.Constraint(rule=required_power)\n",
+    "\n",
+    "\n",
+    "def solar_capacity_constraint(model):\n",
+    "    return model.solar_capacity == sum(\n",
+    "        size * model.solar_size_flags[size] for size in model.SOLAR_SIZES\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.solar_capacity_constraint = pyo.Constraint(rule=solar_capacity_constraint)\n",
+    "\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
     "optimizer.solve(model)\n",
     "print(\n",
@@ -99,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cfa4602",
+   "id": "ba1c2c5d",
    "metadata": {},
    "outputs": [],
    "source": []
