--- a/power.ipynb
+++ b/power.ipynb
@@ -128,6 +128,16 @@
    "id": "ba1c2c5d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(model.display())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2280cf83",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
