--- a/power.ipynb
+++ b/power.ipynb
@@ -44,6 +44,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "82ea6080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PEAK_PRICE = 0.5\n",
+    "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
+    "\n",
+    "OFF_PEAK_PRICE = 0.4\n",
+    "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [],
@@ -53,8 +67,8 @@
     "\n",
     "model.peak_load = pyo.Param(initialize=1)\n",
     "model.off_peak_load = pyo.Param(initialize=5)\n",
-    "model.peak_grid_price = pyo.Param(initialize=0.5)\n",
-    "model.off_peak_grid_price = pyo.Param(initialize=0.5)\n",
+    "model.peak_grid_price = pyo.Param(initialize=PEAK_PRICE)\n",
+    "model.off_peak_grid_price = pyo.Param(initialize=OFF_PEAK_PRICE)\n",
     "model.battery_cost_per_kw = pyo.Param(initialize=0.1)\n",
     "\n",
     "\n",
