--- a/power.ipynb
+++ b/power.ipynb
@@ -52,7 +52,13 @@
     "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
     "\n",
     "OFF_PEAK_PRICE = 0.4\n",
-    "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\""
+    "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
+    "\n",
+    "BATTERY_COST_PER_KW = 0.15\n",
+    "\"\"\"\n",
+    "battery levelized cost per kW-hour\n",
+    "https://www.lazard.com/research-insights/levelized-cost-of-energyplus-lcoeplus/\n",
+    "\"\"\""
    ]
   },
   {
@@ -69,7 +75,7 @@
     "model.off_peak_load = pyo.Param(initialize=5)\n",
     "model.peak_grid_price = pyo.Param(initialize=PEAK_PRICE)\n",
     "model.off_peak_grid_price = pyo.Param(initialize=OFF_PEAK_PRICE)\n",
-    "model.battery_cost_per_kw = pyo.Param(initialize=0.1)\n",
+    "model.battery_cost_per_kw = pyo.Param(initialize=BATTERY_COST_PER_KW)\n",
     "\n",
     "\n",
     "model.SOLAR_SIZES = pyo.Set(initialize=INSTALLATION_SIZES.keys())\n",
