--- a/power.ipynb
+++ b/power.ipynb
@@ -44,6 +44,17 @@
     "\"\"\"\n",
     "battery levelized cost per kW-hour\n",
     "https://www.lazard.com/research-insights/levelized-cost-of-energyplus-lcoeplus/\n",
+    "\"\"\"\n",
+    "\n",
+    "PEAK_CONSUMPTION = 10\n",
+    "\"\"\"\n",
+    "https://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\n",
+    "\"\"\"\n",
+    "\n",
+    "OFF_PEAK_CONSUMPTION = 20\n",
+    "\"\"\"\n",
+    "https://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\n",
+    "\n",
     "\"\"\""
    ]
   },
@@ -57,8 +68,8 @@
     "model = pyo.ConcreteModel()\n",
     "\n",
     "\n",
-    "model.peak_load = pyo.Param(initialize=1)\n",
-    "model.off_peak_load = pyo.Param(initialize=5)\n",
+    "model.peak_load = pyo.Param(initialize=PEAK_CONSUMPTION)\n",
+    "model.off_peak_load = pyo.Param(initialize=OFF_PEAK_CONSUMPTION)\n",
     "model.peak_grid_price = pyo.Param(initialize=PEAK_PRICE)\n",
     "model.off_peak_grid_price = pyo.Param(initialize=OFF_PEAK_PRICE)\n",
     "model.battery_cost_per_kw = pyo.Param(initialize=BATTERY_COST_PER_KW)\n",
@@ -120,6 +131,14 @@
     ")\n",
     "print(model.display())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47cfd46e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
